--- a/src/App.css
+++ b/src/App.css
@@ -12,20 +12,39 @@
     flex: 1;
 }
 
+.App {
+    background-color: #ebd471;
+}
+
 .App > header {
-    background-color: #333;
-    color: #fcfaf1;
-}
-
-.App > nav {
-    background-color: #222;
-}
-
-.App > main p {
-    color: #444;
+    color: #380a3b;
+    padding: 5px;
 }
 
 .App > footer {
-    background-color: #555;
-    color: #e0dfda;
+    background-color: #380a3b;
+    color: white;
+    padding: 5px;
+}
+
+.App h3 {
+    background-color: #380a3b;
+    color: white;
+    margin: 0px 0px 0px 0px;
+    padding: 5px;
+    font-family: Helvetica, sans-serif;
+}
+
+.App h2 {
+    color: #077e77;
+    font-family: Helvetica, sans-serif;
+}
+
+.App p {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.App button {
+    background-color: #077e77;
+    color: white;
 }
