--- a/src/ConcertList/ConcertList.css
+++ b/src/ConcertList/ConcertList.css
@@ -1,12 +1,11 @@
-.concerts ul {
+.Concerts ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
   
-.concerts li {
+.Concerts li {
     padding-bottom: 10px;
     border: 1px solid black;
     border-radius: 5px;
 }
-  
