--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -17,4 +17,7 @@
 .Nav {
   color: white;
   background-color: #380a3b;
+  padding: 5px;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
 }
