Fonts and colors set for now

--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,13 @@
     padding: 5px;
 }
 
-.App > footer {
-    background-color: #380a3b;
-    color: white;
-    padding: 5px;
-}
-
 .App h3 {
     background-color: #380a3b;
     color: white;
     margin: 0px 0px 0px 0px;
     padding: 5px;
     font-family: Helvetica, sans-serif;
+    text-align: center;
 }
 
 .App h2 {
