--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,3 +1,10 @@
 .Footer {
-    font-size: 10pt;
+    background-color: #380a3b;
+    color: #fd604e;
+}
+
+.Footer p {
+    margin: 0px 0px 0px 0px;
+    padding: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
