--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,3 +1,13 @@
 .Header h1 {
     font-family: Helvetica, sans-serif;
+    text-align: center;
+    font-size: 48px;
+    margin: 10px;
+}
+
+.Header h2 {
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+    font-size: 32px;
+    margin: 10px;
 }
