--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -2,7 +2,7 @@
 .Nav a:active,
 .Nav a:focus,
 .Nav a:visited {
-  color: #ececea;
+  color: #fd604e;
 }
 
 .Nav a:hover {
@@ -18,6 +18,6 @@
   color: white;
   background-color: #380a3b;
   padding: 5px;
-  font-family: Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
