Switched red and white nav and h3 colors respectively

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 
 .App h3 {
     background-color: #380a3b;
-    color: white;
+    color: #fd604e;
     margin: 0px 0px 0px 0px;
     padding: 5px;
     font-family: Helvetica, sans-serif;
