Added responsive groups and items

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,3 +1,18 @@
-/*
-CSS is in App.css
-*/
+/* Groups & Items (Mobile first) */
+
+.group {
+    display: flex;
+    flex-direction: column;
+}
+
+.item-double {
+    flex: 1;
+}
+
+/* Groups & Items (Desktop) */
+
+@media all and (min-width: 800px) {
+    .group {
+        flex-direction: row;
+    }
+}
