--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@
 
 .App p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 10px 5px 10px 5px
 }
 
 .App button {
