--- a/src/SignUpForm/SignUpForm.css
+++ b/src/SignUpForm/SignUpForm.css
@@ -1,1 +1,4 @@
-/* need to add css */
+.Signup form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 10px 5px 10px 5px
+}
