--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -1,4 +1,9 @@
 .Login form {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 10px 5px 10px 5px
+    margin: 15px 10px;
+}
+
+.Login p {
+    font-size: 14px;
+    margin: 5px 0px;
 }
