--- a/src/ConcertList/ConcertList.css
+++ b/src/ConcertList/ConcertList.css
@@ -9,3 +9,8 @@
     border: 1px solid black;
     border-radius: 5px;
 }
+
+.Concerts button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 15px 10px;
+}
