--- a/src/EditConcertForm/EditConcertForm.css
+++ b/src/EditConcertForm/EditConcertForm.css
@@ -1,1 +1,9 @@
-/* need to add css */
+.Edit-concert form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 15px 10px;
+}
+
+.Edit-concert p {
+    font-size: 14px;
+    margin: 5px 0px;
+}
