--- a/src/ConcertItem/ConcertItem.css
+++ b/src/ConcertItem/ConcertItem.css
@@ -1,12 +1,14 @@
-.concerts ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-  
-.concerts li {
-    padding-bottom: 10px;
+.Concert li {
+    padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
+    background: #a8f0ec;
 }
-  
+
+.Concert p {
+    margin: 5px;
+}
+
+.Concert button {
+    margin: 5px;
+}
