--- a/src/ConcertList/ConcertList.css
+++ b/src/ConcertList/ConcertList.css
@@ -2,15 +2,11 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-}
-  
-.Concerts li {
-    padding-bottom: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
+    padding: 20px;
 }
 
-.Concerts button {
+/* Center this button */
+.Add-new-concert-button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 15px 10px;
 }
