--- a/src/ConcertItem/ConcertItem.css
+++ b/src/ConcertItem/ConcertItem.css
@@ -2,7 +2,8 @@
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
-    background: #a8f0ec;
+    background: #a4f1e5;
+    margin: 0px 10px 10px 10px;
 }
 
 .Concert p {
