--- a/src/ConcertList/ConcertList.css
+++ b/src/ConcertList/ConcertList.css
@@ -2,11 +2,20 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    padding: 20px;
 }
 
-/* Center this button */
+/* Button needs recentering */
+.Add-new-concert-button-container {
+    height: 50px;
+    position: relative;
+}
+
 .Add-new-concert-button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 15px 10px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
