--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,6 +1,9 @@
 .Footer {
     background-color: #380a3b;
     color: white;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 .Footer p {
