--- a/src/AddConcertForm/AddConcertForm.css
+++ b/src/AddConcertForm/AddConcertForm.css
@@ -3,6 +3,15 @@
     margin: 15px 10px;
 }
 
+.Add-new-concert h3 {
+    background-color: #380a3b;
+    color: #fd604e;
+    margin: 0px 0px 0px 0px;
+    padding: 10px;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+}
+
 .Add-new-concert p {
     font-size: 14px;
     margin: 5px 0px;
