--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -1,3 +1,12 @@
+.Landing-page h3 {
+    background-color: #380a3b;
+    color: #fd604e;
+    margin: 0px 0px 0px 0px;
+    padding: 10px;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+}
+
 .Landing-page-p {
     margin: 15px 10px
 }
