--- a/src/AddConcertForm/AddConcertForm.css
+++ b/src/AddConcertForm/AddConcertForm.css
@@ -1,8 +1,3 @@
-.Add-new-concert form {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 15px 10px;
-}
-
 .Add-new-concert h3 {
     background-color: #380a3b;
     color: #fd604e;
@@ -15,4 +10,36 @@
 .Add-new-concert p {
     font-size: 14px;
     margin: 5px 0px;
+}
+
+.Form-container {
+    display: block;
+    text-align: center;
+}
+
+.Add-new-concert-form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    padding: 10px;
+    border: 1px solid black;
+    background: #a4f1e5;
+    margin: 20px;
+}
+
+.Add-concert-button-container {
+    height: 40px;
+    position: relative;
+}
+
+.Add-concert-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
