--- a/src/AddConcertForm/AddConcertForm.css
+++ b/src/AddConcertForm/AddConcertForm.css
@@ -13,20 +13,17 @@
 }
 
 .Form-container {
-    display: block;
     text-align: center;
 }
 
 .Add-new-concert-form {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
     text-align: left;
     padding: 10px;
     border: 1px solid black;
-    background: #a4f1e5;
-    margin: 20px;
+    background: #ffb5ad;
+    margin: 20px 20px 10px 20px;
 }
 
 .Add-concert-button-container {
@@ -43,3 +40,12 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
+/*
+.Concert li {
+    padding: 10px;
+    border: 1px solid black;
+    background: #a4f1e5;
+    margin: 0px 20px 10px 20px;
+}
+*/
