--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,11 @@ body {
 }
 
 .App textarea {
-    margin: 2px 0px 0px 0px;
+    margin: 2px 0px 0px 2px;
     border: 1px solid;
     border-radius: 3px;
+    height: 150px;
+    width: 380px;
 }
 
 .App input {
