--- a/src/EditConcertForm/EditConcertForm.css
+++ b/src/EditConcertForm/EditConcertForm.css
@@ -1,8 +1,3 @@
-.Edit-concert form {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 15px 10px;
-}
-
 .Edit-concert h3 {
     background-color: #380a3b;
     color: #fd604e;
@@ -16,3 +11,36 @@
     font-size: 14px;
     margin: 5px 0px;
 }
+
+.Form-container {
+    text-align: center;
+}
+
+.Edit-concert-form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: inline-block;
+    text-align: left;
+    padding: 10px;
+    border: 1px solid black;
+    background: #ffb5ad;
+    margin: 20px 20px 10px 20px;
+}
+
+/* WILL BE DIFFERENT BC 2 BUTTONS EXIST
+BOTH NEED TO BE CENTERED
+
+.Edit-concert-button-container {
+    height: 40px;
+    position: relative;
+}
+
+.Edit-concert-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+*/
