--- a/src/EditConcertForm/EditConcertForm.css
+++ b/src/EditConcertForm/EditConcertForm.css
@@ -26,6 +26,31 @@
     margin: 20px 20px 10px 20px;
 }
 
+.Button-container {
+    height: 40px;
+    position: relative;
+}
+
+.Update-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.Delete-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 /* WILL BE DIFFERENT BC 2 BUTTONS EXIST
 BOTH NEED TO BE CENTERED
 
