--- a/src/EditConcertForm/EditConcertForm.css
+++ b/src/EditConcertForm/EditConcertForm.css
@@ -22,7 +22,7 @@
     text-align: left;
     padding: 10px;
     border: 1px solid black;
-    background: #ffb5ad;
+    background: #fffcd3;
     margin: 20px 20px 10px 20px;
 }
 
