--- a/src/SignUpForm/SignUpForm.css
+++ b/src/SignUpForm/SignUpForm.css
@@ -1,9 +1,33 @@
-.Signup form {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 15px 10px;
-}
-
 .Signup p {
     font-size: 14px;
     margin: 5px 0px;
+}
+
+.Form-container {
+    text-align: center;
+}
+
+.Signup-form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: inline-block;
+    text-align: left;
+    padding: 10px;
+    border: 1px solid black;
+    background: #fffcd3;
+    margin: 20px 20px 10px 20px;
+}
+
+.Signup-button-container {
+    height: 30px;
+    position: relative;
+}
+
+.Signup-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
