--- a/src/ConcertItem/ConcertItem.css
+++ b/src/ConcertItem/ConcertItem.css
@@ -1,6 +1,5 @@
 .Concert li {
     padding: 10px;
-    border: 1px solid black;
     background: #a4f1e5;
     margin: 0px 20px 10px 20px;
 }
@@ -13,8 +12,19 @@
     font-size: 18px;
 }
 
-.Concert button {
-    margin: 5px;
+.Edit-button-container {
+    height: 40px;
+    position: relative;
+}
+
+.Edit-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 /* Groups & Items (Mobile first) */
