--- a/src/ConcertItem/ConcertItem.css
+++ b/src/ConcertItem/ConcertItem.css
@@ -1,7 +1,7 @@
 .Concert li {
-    padding: 10px;
-    background: #a4f1e5;
-    margin: 0px 20px 10px 20px;
+    padding: 15px;
+    background: #fffcd3;
+    margin: 0px 20px 15px 20px;
 }
 
 .Concert p {
