--- a/src/EditConcertForm/EditConcertForm.css
+++ b/src/EditConcertForm/EditConcertForm.css
@@ -20,9 +20,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline-block;
     text-align: left;
-    padding: 10px;
+    padding: 15px;
     background: #fffcd3;
-    margin: 20px 20px 10px 20px;
+    margin: 20px;
 }
 
 .Button-container {
@@ -49,22 +49,3 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
-
-/* WILL BE DIFFERENT BC 2 BUTTONS EXIST
-BOTH NEED TO BE CENTERED
-
-.Edit-concert-button-container {
-    height: 40px;
-    position: relative;
-}
-
-.Edit-concert-button {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-*/
