--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -7,4 +7,6 @@
     margin: 0px 0px 0px 0px;
     padding: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
 }
+ 
