--- a/src/SignUpForm/SignUpForm.css
+++ b/src/SignUpForm/SignUpForm.css
@@ -11,9 +11,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline-block;
     text-align: left;
-    padding: 10px;
+    padding: 15px;
     background: #fffcd3;
-    margin: 20px 20px 10px 20px;
+    margin: 20px;
 }
 
 .Signup-button-container {
