--- a/src/App.css
+++ b/src/App.css
@@ -5,47 +5,43 @@ body {
 
 .App {
     box-sizing: border-box;
-}
-
-.App {
     display: flex;
     flex-direction: column;
+    background-color: khaki;
+    min-height: 100%;
+    min-width: 100vw;
 }
 
 .App > main {
     flex: 1;
 }
 
-.App {
-    background-color: #ebd471;
-    min-height: 100vh;
-}
-
-.App > header {
-    color: #380a3b;
-    padding: 5px;
-}
-
-.App h2 {
-    color: #077e77;
-    font-family: Helvetica, sans-serif;
+.App h3 {
+    color: coral;
+    background-color: indigo;
+    font-size: 1.1em;
+    text-align: center;
 }
 
 .App p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1em;
+    line-height: 1.3;
 }
 
 .App button {
-    background-color: #077e77;
+    background-color: teal;
     color: white;
     border-radius: 3px;
-    padding: 5px;
+    padding: 8px;
+    margin: 5px;
     cursor: pointer;
     border: none;
+    font-size: 1em;
 }
 
 .App button:hover {
-    color: #fd604e;
+    color: coral;
     text-decoration: solid;
     font-style: bold;
 }
@@ -66,8 +62,8 @@ body {
 
 .Error-message {
     font-style: bold;
-    font-size: 14px;
+    font-size: 1em;
     margin: 0px 0px 5px 0px;
     text-align: center;
-    color: #fd604e;
+    color: coral;
 }
