--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,12 +1,15 @@
 .Footer {
-    background-color: #380a3b;
     color: white;
+    background-color: indigo;
 }
 
 .Footer p {
-    margin: 0px 0px 0px 0px;
-    padding: 5px;
+    margin: 0px;
+    padding: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
+    font-size: 1em;
 }
  
+.Footer a {
+    color: coral;
+}
