--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -1,23 +1,16 @@
-.Login {
-    padding-bottom: 30px;
-}
-
 .Login p {
     font-size: 14px;
     margin: 5px 0px;
-}
-
-.Form-container {
-    text-align: center;
+    color: black;
 }
 
 .Login-form {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: inline-block;
+    display: block;
     text-align: left;
-    padding: 15px;
-    background: #fffcd3;
-    margin: 20px;
+    padding: 20px;
+    margin: 50px;
+    background: cornsilk;
 }
 
 .Login-button-container {
