--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,23 +1,20 @@
-.Nav a,
-.Nav a:active,
-.Nav a:focus,
-.Nav a:visited {
+.Nav {
+  background-color: indigo;
+  margin: 0px;
+  padding: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+}
+
+.Nav a {
   color: white;
 }
 
 .Nav a:hover {
-  color: #fd604e;
+  color: coral;
   text-decoration: solid;
 }
 
 .Nav a:not(:last-of-type) {
   margin-right: 32px;
-}
-
-.Nav {
-  color: white;
-  background-color: #380a3b;
-  padding: 5px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
 }
