--- a/src/SignUpForm/SignUpForm.css
+++ b/src/SignUpForm/SignUpForm.css
@@ -1,19 +1,16 @@
 .Signup p {
-    font-size: 14px;
+    font-size: 1em;
     margin: 5px 0px;
-}
-
-.Form-container {
-    text-align: center;
+    color: black;
 }
 
 .Signup-form {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: inline-block;
+    display: block;
     text-align: left;
-    padding: 15px;
-    background: #fffcd3;
-    margin: 20px;
+    background: cornsilk;
+    padding: 20px;
+    margin: 20px 50px;
 }
 
 .Signup-button-container {
